<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.presentation.screens.user.view.UserInfoViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="@{viewModel.progressBar}"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="@{!viewModel.progressBar}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@{viewModel.gender}"
                    app:imageUrl="@{viewModel.imageUrl}" />

                <EditText
                    style="@style/StudentEditText"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:text="@={viewModel.firstname}" />

                <EditText
                    style="@style/StudentEditText"
                    android:hint="@string/surname"
                    android:inputType="text"
                    android:text="@={viewModel.surname}" />

                <EditText
                    style="@style/StudentEditText"
                    android:hint="@string/gender"
                    android:inputType="text"
                    android:text="@={viewModel.gender}" />

                <EditText
                    style="@style/StudentEditText"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:text="@={viewModel.age}" />

                <EditText
                    style="@style/StudentEditText"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="@{() -> viewModel.onEditClick()}"
                    android:text="@string/edit" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="@{() -> viewModel.onDeleteClick()}"
                    android:text="@string/delete" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>